fix(css): align service cards on homepage

--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -301,6 +301,14 @@
     -webkit-transition: 0.3s ease-in-out;
     -o-transition: 0.3s ease-in-out;
     transition: 0.3s ease-in-out;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    height: 100%;
 }
 .services_list-item .wrapper:hover {
     border-color: #0da574;
@@ -318,6 +326,9 @@
 .services_list-item .wrapper .description {
     margin-bottom: 40px;
     color: #202c38;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
 }
 @media screen and (min-width: 567.98px) {
     .services_list-item .wrapper {
